# c-lwe-snarks

./: .gitignore  AUTHORS  Makefile.am  README  configure.ac  main.c  stat.py
src/: Makefile.am  aes.c  aes.h  benchmark_eval.c  benchmark_lwe.c  benchmark_snark.c  config.h  entropy.c  entropy.h  gmp-impl.h  lwe.c  lwe.h  main.c  random_ssp  snark.c  snark.h  ssp.c  ssp.h  test_aes.c  test_entropy.c  test_lwe.c  test_snark.c  test_ssp.c  tests.h  timeit.h
